--- a/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/PageWithBanner.html
+++ b/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/PageWithBanner.html
@@ -237,7 +237,7 @@
 						<div class="govuk-grid-row">
 							<div class="govuk-grid-column-full">
 								<h3 class="govuk-heading-m">Share this page</h3>
-								<div class="sharethis-inline-share-buttons"></div>
+								<div class="shareaholic-canvas" data-app="share_buttons" data-app-id="12345678"></div>
 							</div>
 						</div>
 					</div>
