--- a/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/PageWithBanner.html
+++ b/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/PageWithBanner.html
@@ -162,7 +162,7 @@
 						<h3 class="govuk-heading-m" id="Local-support">Local support</h3>
 						<p class="govuk-body">You might get support from your local council’s Local Offer for care leavers</p>
 						<p class="govuk-body">For example, this could include things like:</p>
-						<ul>
+						<ul class="govuk-list govuk-list--bullet">
 							<li>help with travel costs (like a bus pass) or essential clothes for work or interviews</li>
 							<li>careers advice and guidance, such as help with job searches or writing your CV</li>
 							<li>work experience or an apprenticeship at your council</li>
