--- a/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/PageWithBanner.html
+++ b/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/PageWithBanner.html
@@ -33,6 +33,11 @@
 		<link rel="stylesheet" href="/css/metadata.css">
 		<link rel="stylesheet" href="/css/navigation.css">
 		<link rel="stylesheet" href="/css/cta.css">
+		<meta property="og:site_name" content="Care leavers">
+		<meta property="og:title" content="Work and employment support">
+		<meta property="og:type" content="website">
+		<meta property="og:url" content="https://localhost/en/work-and-employment-support">
+		<meta property="og:locale" content="en_GB">
 	</head>
 	<body class="govuk-template__body">
 		<script nonce="mock-nonce">document.body.className += ' js-enabled' + ('noModule' in HTMLScriptElement.prototype ? ' govuk-frontend-supported' : '');</script>
@@ -47,7 +52,7 @@
 		<div class="govuk-width-container">
 			<div class="govuk-phase-banner">
 				<p class="translate">
-					<a class="govuk-link" href="/translation">en</a>
+					<a class="govuk-link" href="/translation" rel="nofollow">en</a>
 				</p>
 				<div class="govuk-phase-banner__content">
 					<strong class="govuk-phase-banner__content__tag govuk-tag">
