Updated as per comments

--- a/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/PageWithBanner.html
+++ b/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/PageWithBanner.html
@@ -36,8 +36,8 @@
 		<meta property="og:site_name" content="Care leavers">
 		<meta property="og:title" content="Work and employment support">
 		<meta property="og:type" content="website">
-		<meta property="og:url" content="https://localhost/en/work-and-employment-support">
-		<meta property="og:locale" content="en_GB">
+		<meta property="og:url" content="https://localhost/en/work-and-employment-support?language=en">
+		<meta property="og:locale" content="en">
 	</head>
 	<body class="govuk-template__body">
 		<script nonce="mock-nonce">document.body.className += ' js-enabled' + ('noModule' in HTMLScriptElement.prototype ? ' govuk-frontend-supported' : '');</script>
