--- a/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/HomePageWithSupport.html
+++ b/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/HomePageWithSupport.html
@@ -138,7 +138,7 @@
 							<div class="govuk-grid-column-two-thirds">
 								<h2 class="govuk-heading-l" id="Who-is-this-support-for-">Who is this support for?</h2>
 								<p class="govuk-body">You might have the right to leaving care support if you:</p>
-								<ul class="govuk-list govuk-list--bullet">
+								<ul class="govuk-list govuk-list--bullet govuk-list--spaced">
 									<li>are aged 15 to 24</li>
 									<li>have spent time in care in England</li>
 									<li>
@@ -146,7 +146,7 @@
 									</li>
 								</ul>
 								<p class="govuk-body">This includes:</p>
-								<ul class="govuk-list govuk-list--bullet">
+								<ul class="govuk-list govuk-list--bullet govuk-list--spaced">
 									<li>foster care</li>
 									<li>residential care (like a children’s home)</li>
 									<li>time in custody (like a young offender institution or secure children’s home)</li>
