--- a/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/PageWithBanner.html
+++ b/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/PageWithBanner.html
@@ -36,9 +36,9 @@
 		<meta property="og:site_name" content="Care leavers">
 		<meta property="og:title" content="Work and employment support">
 		<meta property="og:type" content="website">
-		<meta property="og:url" content="https://localhost/en/work-and-employment-support?language=en">
+		<meta property="og:url" content="https://localhost/en/home?language=en">
 		<meta property="og:locale" content="en_GB">
-		<link rel="canonical" href="https://localhost/en/work-and-employment-support?language=en">
+		<link rel="canonical" href="https://localhost/en/home?language=en">
 	</head>
 	<body class="govuk-template__body">
 		<script nonce="mock-nonce">document.body.className += ' js-enabled' + ('noModule' in HTMLScriptElement.prototype ? ' govuk-frontend-supported' : '');</script>
@@ -96,20 +96,6 @@
     document.addEventListener('DOMContentLoaded', function () {
         const menuToggle = document.querySelector('.govuk-js-service-navigation-toggle');
         const navigation = document.getElementById('navigation');
-
-        function updateMenuVisibility() {
-            const screenWidth = window.innerWidth;
-
-            if (screenWidth < 688) { // 43em = 688px
-                menuToggle.removeAttribute('hidden');
-            } else {
-                menuToggle.setAttribute('hidden', '');
-            }
-        }
-
-        // Ensure toggle button is visible at the correct screen size
-        window.addEventListener('resize', updateMenuVisibility);
-        updateMenuVisibility(); // Run on page load
 
         if (menuToggle && navigation) {
             menuToggle.addEventListener('click', function () {
