--- a/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/PageWithBanner.html
+++ b/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/PageWithBanner.html
@@ -27,7 +27,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Work and employment support - Care leavers</title>
 		<link rel="shortcut icon" sizes="16x16 32x32 48x48" href="/assets/images/favicon.svg">
-		<link href="/govuk/all.min.css?v=1zk5-99q-gHitumTgjIgN7iX7dHY_sxfmG9CzkpR58o" rel="stylesheet">
+		<link rel="stylesheet" href="/css/govuk-frontend.min.css">
 		<link rel="stylesheet" href="/css/dfefrontend.css">
 		<link rel="stylesheet" href="/css/application.css">
 		<link rel="stylesheet" href="/css/metadata.css">
@@ -41,7 +41,10 @@
 		<link rel="canonical" href="https://localhost/en/work-and-employment-support?language=en">
 	</head>
 	<body class="govuk-template__body">
-		<script nonce="mock-nonce">document.body.className += ' js-enabled' + ('noModule' in HTMLScriptElement.prototype ? ' govuk-frontend-supported' : '');</script>
+		<script nonce="mock-nonce">
+    document.body.className += ' js-enabled' + ('noModule' in HTMLScriptElement.prototype ? ' govuk-frontend-supported' : '');
+
+		</script>
 		<a b-k59dbireqp="" href="#main-content" class="govuk-skip-link" data-module="govuk-skip-link">Skip to main content</a>
 		<div class="environment-banner">
 			<div class="govuk-body-s">
@@ -314,10 +317,9 @@
             addPrintButtonEventListener();
         
 		</script>
-		<script src="/govuk/all.min.js?v=RHpXsNmLgFsVb0_A7CLeltntRsu0LVT9kE8cBjem4vY" type="module"></script>
-		<script nonce="mock-nonce" type="module">
-import { initAll } from '/govuk/all.min.js'
-initAll()
+		<script type="module" nonce="mock-nonce">
+    import { initAll } from '/js/govuk-frontend.min.js'
+    initAll()
 
 		</script>
 	</body>
