--- a/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/PageWithBanner.html
+++ b/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/PageWithBanner.html
@@ -33,10 +33,14 @@
 		<link rel="stylesheet" href="/css/metadata.css">
 		<link rel="stylesheet" href="/css/navigation.css">
 		<link rel="stylesheet" href="/css/cta.css">
-		<meta property="og:site_name" content="Care leavers">
-		<meta property="og:title" content="Work and employment support">
 		<meta property="og:type" content="website">
+		<meta name="twitter:card" content="summary_large_image">
+		<meta property="og:site_name" content="Care leavers">
+		<meta property="twitter:domain" content="localhost">
+		<meta name="twitter:title" content="Work and employment support">
+		<meta property="og:title" content="Work and employment support">
 		<meta property="og:url" content="https://localhost/en/home">
+		<meta property="twitter:url" content="https://localhost/en/home">
 		<meta property="og:locale" content="en_GB">
 		<link rel="canonical" href="https://localhost/en/home">
 	</head>
