--- a/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/SimpleAsset.html
+++ b/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/SimpleAsset.html
@@ -1,10 +1,28 @@
 <!DOCTYPE html>
 <html class="govuk-template" dir="ltr" lang="en">
 	<head>
-		<script nonce="mock-nonce">(function(c,l,a,r,i,t,y){c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);})(window,document,"clarity","script","test-clarity");(function(){window.clarity('consent',false);}());</script>
+		
+		<!-- Clarity -->
+		<script type="text/javascript" nonce="mock-nonce">
+            (function(c,l,a,r,i,t,y){
+                c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)}; 
+                t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+                y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+            })(window, document, "clarity", "script", "test-clarity");
+
+            (function () {
+                window.clarity('consent', false);
+            }());
+        
+		</script>
+		
+		<!-- End Clarity -->     
+		<!-- BEGIN SHAREAHOLIC CODE -->
 		<link rel="preload" href="https://cdn.shareaholic.net/assets/pub/shareaholic.js" as="script">
 		<meta name="shareaholic:site_id" content="abcdefghijk">
 		<script data-cfasync="false" async="" src="https://cdn.shareaholic.net/assets/pub/shareaholic.js" nonce="mock-nonce"></script>
+		
+		<!-- END SHAREAHOLIC CODE -->
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Image Test</title>
@@ -27,7 +45,10 @@
 		<link rel="canonical" href="https://localhost/en/home">
 	</head>
 	<body class="govuk-template__body">
-		<script nonce="mock-nonce">document.body.className+=' js-enabled'+('noModule'in HTMLScriptElement.prototype?' govuk-frontend-supported':'');</script>
+		<script nonce="mock-nonce">
+    document.body.className += ' js-enabled' + ('noModule' in HTMLScriptElement.prototype ? ' govuk-frontend-supported' : '');
+
+		</script>
 		<a href="#main-content" class="govuk-skip-link" data-module="govuk-skip-link">Skip to main content</a>
 		<div class="environment-banner">
 			<div class="govuk-body-s">
@@ -54,7 +75,7 @@
 		<header class="dfe-header" role="banner">
 			<div class="dfe-width-container dfe-header__container">
 				<div class="dfe-header__logo">
-					<a class="dfe-header__link dfe-header__link--service" href="http://localhost/en/home" aria-label="Care leavers homepage">
+					<a class="dfe-header__link dfe-header__link--service " href="http://localhost/en/home" aria-label="Care leavers homepage">
 						<img src="/assets/dfe-logo.png" class="dfe-logo" alt="Care leavers homepage">
 						<img src="/assets/dfe-logo-alt.png" class="dfe-logo-hover" alt="Care leavers homepage">
 					</a>
@@ -73,7 +94,8 @@
 						<button type="button" class="govuk-service-navigation__toggle govuk-js-service-navigation-toggle" aria-controls="navigation" hidden="">
 							Menu
 						</button>
-						<ul class="govuk-service-navigation__list" id="navigation"></ul>
+						<ul class="govuk-service-navigation__list" id="navigation">
+						</ul>
 					</nav>
 				</div>
 			</div>
@@ -82,7 +104,9 @@
 			<div class="govuk-width-container" id="main-header-container">
 				<div class="govuk-grid-row">
 					<div class="govuk-grid-column-two-thirds">
-						<h1 class="govuk-heading-xl">Image Test</h1>
+						<h1 class="govuk-heading-xl">
+							Image Test
+						</h1>
 					</div>
 				</div>
 			</div>
@@ -94,14 +118,16 @@
 						<img class="full-width-image" src="//images.ctfassets.net/3y72rykjd1o5/71UfwHVCjz9O7RxA0e3jrJ/10a9c71dd9d5aa3ef795b1a571aa33d4/Test.png" alt="Test alt description">
 						<p class="govuk-body"></p>
 					</div>
-					<div class="govuk-grid-column-full"></div>
+					<div class="govuk-grid-column-full">
+					</div>
 					<div class="govuk-grid-column-one-third"></div>
-					<div class="govuk-grid-column-full" id="secondary-content"></div>
+					<div class="govuk-grid-column-full" id="secondary-content">
+					</div>
 				</div>
 			</main>
 		</div>
-		<footer class="govuk-footer" role="contentinfo">
-			<div class="govuk-width-container">
+		<footer class="govuk-footer " role="contentinfo">
+			<div class="govuk-width-container ">
 				<div class="govuk-footer__meta">
 					<div class="govuk-footer__meta-item govuk-footer__meta-item--grow">
 						<h2 class="govuk-visually-hidden">Support links</h2>
@@ -122,21 +148,43 @@
 						<span class="govuk-footer__licence-description">
 							All content is available under the
 							<a class="govuk-footer__link" href="https://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/" rel="license">
-								Open Government Licence v3.0
+								Open                         Government Licence v3.0
 							</a>, except where otherwise stated
 						</span>
 					</div>
 					<div class="govuk-footer__meta-item">
 						<a class="govuk-footer__link govuk-footer__copyright-logo" href="https://www.nationalarchives.gov.uk/information-management/re-using-public-sector-information/uk-government-licensing-framework/crown-copyright/">
-							© Crown copyright
+							©                     Crown copyright
 						</a>
 					</div>
 				</div>
 			</div>
 		</footer>
-		<script type="module" nonce="mock-nonce">import{initAll}from'/js/govuk-frontend.min.js'
-initAll()</script>
+		<script type="module" nonce="mock-nonce">
+    import { initAll } from '/js/govuk-frontend.min.js'
+    initAll()
+
+		</script>
 		<script src="/js/dfefrontend.min.js" nonce="mock-nonce"></script>
-		<script nonce="mock-nonce">window.dataLayer=window.dataLayer||[];const linksWithLanguage=document.querySelectorAll("a[hreflang]");linksWithLanguage.forEach((link)=>{link.addEventListener("click",(e)=>{let originLanguage=document.documentElement.lang;let targetLanguage=link.hreflang;if(originLanguage!==targetLanguage){window.dataLayer.push({'event':'languageChanged','languages':{'from':originLanguage,'to':targetLanguage}});}})})</script>
+		<script nonce="mock-nonce">
+    window.dataLayer = window.dataLayer || [];
+    const linksWithLanguage = document.querySelectorAll("a[hreflang]");
+    linksWithLanguage.forEach((link) => {
+        link.addEventListener("click", (e) => {
+            let originLanguage = document.documentElement.lang;
+            let targetLanguage = link.hreflang;
+            if (originLanguage !== targetLanguage) {
+                window.dataLayer.push({
+                    'event': 'languageChanged',
+                    'languages': {
+                        'from': originLanguage,
+                        'to': targetLanguage
+                    }
+                });
+            }
+        })
+    })
+
+		</script>
 	</body>
 </html>
