--- a/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/HomePageWithSupport.html
+++ b/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/HomePageWithSupport.html
@@ -28,6 +28,8 @@
 		<meta property="twitter:description" content="Leaving care can be a challenging time. Whether you’re still in care or have already left, help is available.">
 		<meta name="description" content="Leaving care can be a challenging time. Whether you’re still in care or have already left, help is available.">
 		<link rel="canonical" href="https://localhost/en/home">
+		<meta name="google-site-verification">
+		<meta name="msvalidate.01">
 	</head>
 	<body class="govuk-template__body">
 		<script nonce="mock-nonce">document.body.className+=' js-enabled'+('noModule'in HTMLScriptElement.prototype?' govuk-frontend-supported':'');</script>
