--- a/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/PageWithBanner.html
+++ b/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/PageWithBanner.html
@@ -25,6 +25,8 @@
 		<meta property="twitter:url" content="https://localhost/en/home">
 		<meta property="og:locale" content="en_GB">
 		<link rel="canonical" href="https://localhost/en/home">
+		<meta name="google-site-verification">
+		<meta name="msvalidate.01">
 	</head>
 	<body class="govuk-template__body">
 		<script nonce="mock-nonce">document.body.className+=' js-enabled'+('noModule'in HTMLScriptElement.prototype?' govuk-frontend-supported':'');</script>
