--- a/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/PageWithBanner.html
+++ b/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/PageWithBanner.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="govuk-template" dir="ltr" lang="en">
+<html class="govuk-template--rebranded" dir="ltr" lang="en">
 	<head>
 		<script nonce="mock-nonce">(function(c,l,a,r,i,t,y){c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);})(window,document,"clarity","script","test-clarity");(function(){window.clarity('consent',false);}());</script>
 		<link rel="preload" href="https://cdn.shareaholic.net/assets/pub/shareaholic.js" as="script">
@@ -9,14 +9,15 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Work and employment support</title>
 		<style nonce="mock-nonce">:root{--generated:TODAY';--siteurl:'https://localhost/en/home'}</style>
-		<link rel="icon" sizes="48x48" href="/assets/images/favicon.ico">
-		<link rel="icon" sizes="any" type="image/svg+xml" href="/assets/images/favicon.svg">
-		<link rel="mask-icon" href="/assets/images/govuk-icon-mask.svg" color="#0b0c0c">
-		<link rel="apple-touch-icon" sizes="180x180" href="/assets/images/govuk-icon-180.png">
-		<link rel="manifest" href="/assets/manifest.json">
+		<link rel="icon" sizes="48x48" href="/assets/rebrand/images/favicon.ico">
+		<link rel="icon" sizes="any" type="image/svg+xml" href="/assets/rebrand/images/favicon.svg">
+		<link rel="mask-icon" href="/assets/rebrand/images/govuk-icon-mask.svg" color="#0b0c0c">
+		<link rel="apple-touch-icon" sizes="180x180" href="/assets/rebrand/images/govuk-icon-180.png">
+		<link rel="manifest" href="/assets/rebrand/manifest.json">
 		<meta name="apple-mobile-web-app-title" content="Care leavers">
 		<link rel="stylesheet" href="/css/application.css">
 		<link rel="stylesheet" href="/css/print.css">
+		<link rel="stylesheet" href="/css/rebrand.css">
 		<meta property="og:type" content="website">
 		<meta name="twitter:card" content="summary_large_image">
 		<meta property="og:site_name" content="Care leavers">
@@ -55,12 +56,11 @@
 				</div>
 			</div>
 		</div>
-		<header class="dfe-header" role="banner">
-			<div class="dfe-width-container dfe-header__container">
-				<div class="dfe-header__logo">
-					<a class="dfe-header__link dfe-header__link--service" href="/en/home" aria-label="Care leavers homepage">
-						<img src="/assets/dfe-logo.png" class="dfe-logo" alt="Care leavers homepage">
-						<img src="/assets/dfe-logo-alt.png" class="dfe-logo-hover" alt="Care leavers homepage">
+		<header class="govuk-header" data-module="govuk-header">
+			<div class="govuk-header__container govuk-width-container">
+				<div class="govuk-header__logo">
+					<a class="govuk-header__link govuk-header__link--homepage" href="/en/home" aria-label="Care leavers homepage">
+						<img src="/assets/department-for-education_white.png" alt="Care leavers homepage" class="govuk-header__logotype">
 					</a>
 				</div>
 			</div>
