--- a/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/HomePageWithSupport.html
+++ b/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/HomePageWithSupport.html
@@ -137,7 +137,7 @@
 											</a>
 										</h3>
 										<p class="govuk-body">Help with money when you leave care and benefits you can apply for</p>
-										<div class="dfe-card-link-print-url govuk-body-s" data-full-url="http://localhost/en/money-and-benefits"></div>
+										<span class="dfe-card-link-print-url govuk-body-s">http://localhost/en/money-and-benefits</span>
 									</div>
 								</div>
 								<div class="dfe-card">
@@ -149,7 +149,7 @@
 											</a>
 										</h3>
 										<p class="govuk-body">Help finding somewhere to live and other support with housing costs</p>
-										<div class="dfe-card-link-print-url govuk-body-s" data-full-url="http://localhost/en/housing-and-accommodation-support"></div>
+										<span class="dfe-card-link-print-url govuk-body-s">http://localhost/en/housing-and-accommodation-support</span>
 									</div>
 								</div>
 								<div class="dfe-card">
@@ -161,7 +161,7 @@
 											</a>
 										</h3>
 										<p class="govuk-body">Support and services to help with finding and staying in work</p>
-										<div class="dfe-card-link-print-url govuk-body-s" data-full-url="http://localhost/en/work-and-employment-support"></div>
+										<span class="dfe-card-link-print-url govuk-body-s">http://localhost/en/work-and-employment-support</span>
 									</div>
 								</div>
 								<div class="dfe-card">
@@ -173,7 +173,7 @@
 											</a>
 										</h3>
 										<p class="govuk-body">Support to help you start or continue education and training</p>
-										<div class="dfe-card-link-print-url govuk-body-s" data-full-url="http://localhost/en/education-and-training-support"></div>
+										<span class="dfe-card-link-print-url govuk-body-s">http://localhost/en/education-and-training-support</span>
 									</div>
 								</div>
 								<div class="dfe-card">
@@ -185,7 +185,7 @@
 											</a>
 										</h3>
 										<p class="govuk-body">Help with your physical and mental health, including disability support</p>
-										<div class="dfe-card-link-print-url govuk-body-s" data-full-url="http://localhost/en/health-and-wellbeing-support"></div>
+										<span class="dfe-card-link-print-url govuk-body-s">http://localhost/en/health-and-wellbeing-support</span>
 									</div>
 								</div>
 								<div class="dfe-card">
@@ -197,7 +197,7 @@
 											</a>
 										</h3>
 										<p class="govuk-body">Help and advice if you arrived alone in the UK to seek asylum</p>
-										<div class="dfe-card-link-print-url govuk-body-s" data-full-url="http://localhost/en/support-for-young-people-seeking-asylum"></div>
+										<span class="dfe-card-link-print-url govuk-body-s">http://localhost/en/support-for-young-people-seeking-asylum</span>
 									</div>
 								</div>
 							</div>
