--- a/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/SimpleAsset.html
+++ b/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/SimpleAsset.html
@@ -60,7 +60,7 @@
 			<div class="govuk-header__container govuk-width-container">
 				<div class="govuk-header__logo">
 					<a class="govuk-header__link govuk-header__link--homepage" href="/en/home" aria-label="Care leavers homepage">
-						<img src="/assets/department-for-education_white.png" alt="" class="govuk-header__logotype">
+						<img src="/assets/department-for-education_white.png" alt="Department for Education" class="govuk-header__logotype">
 					</a>
 				</div>
 			</div>
