--- a/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/HomePageWithSupport.html
+++ b/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/HomePageWithSupport.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="govuk-template--rebranded" dir="ltr" lang="en">
+<html class="govuk-template" dir="ltr" lang="en">
 	<head>
 		<script nonce="mock-nonce">(function(c,l,a,r,i,t,y){c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);})(window,document,"clarity","script","test-clarity");(function(){window.clarity('consent',false);}());</script>
 		<link rel="preload" href="https://cdn.shareaholic.net/assets/pub/shareaholic.js" as="script">
@@ -62,7 +62,7 @@
 		<header class="govuk-header" data-module="govuk-header">
 			<div class="govuk-header__container govuk-width-container">
 				<div class="govuk-header__logo">
-					<a class="govuk-header__link govuk-header__link--homepage" href="/en/home" aria-label="Care leavers homepage">
+					<a class="govuk-header__homepage-link" href="/en/home" aria-label="Care leavers homepage">
 						<img src="/assets/department-for-education_white.png" alt="Care leavers homepage" class="govuk-header__logotype">
 					</a>
 				</div>
@@ -228,7 +228,7 @@
 						<h2 class="govuk-heading-l" id="Guides">Guides</h2>
 						<section class="dfe-section alternating-image-text">
 							<div class="govuk-!-margin-top-3 govuk-!-margin-bottom-5">
-								<div class="govuk-grid-row split-panel" style="background:#f3f2f1;vertical-align:text-top">
+								<div class="govuk-grid-row split-panel" style="background:#f3f3f3;vertical-align:text-top">
 									<div class="govuk-grid-column-one-half image-column">
 										<div class="image-container" style="background-image:url('//images.ctfassets.net/3y72rykjd1o5/3AJ5VJg0WfmJImY90KOpQU/39af1e2a663401b7607b9fac86c50d1e/image.png')"></div>
 									</div>
