--- a/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/SimpleAsset.html
+++ b/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/SimpleAsset.html
@@ -114,7 +114,7 @@
 								<a class="govuk-footer__link" href="/en/cookie-policy">Cookie policy</a>
 							</li>
 							<li class="govuk-footer__inline-list-item">
-								<a class="govuk-footer__link" href="/en/accessibility-statement">Accessibility statement</a>
+								<a class="govuk-footer__link" href="https://accessibility-statements.education.gov.uk/s/65">Accessibility statement</a>
 							</li>
 							<li class="govuk-footer__inline-list-item">
 								<a class="govuk-footer__link" href="/en/privacy-policies">Privacy policies</a>
